--- a/content/about/index.html
+++ b/content/about/index.html
@@ -4,6 +4,8 @@
 {% extends "layout/page.html" %}
 
 {% block page_content %}
+{{ resource.meta }}
+
 <h4>Welcome to OSX Rift.</h4>
 <p>This is a place to share all virtual reality resources capable of working on OSX, from tips to get the most out of your Rift on OSX to tech-demos, games and apps. We're a community to enable Mac to be a capable machines in VR and to stop history from repeating itself with the PC gaming situation.</p>
 
